# DocuMind_python

./: .env.bak  .env.example  .gitignore  LEARNING_GUIDE.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  eval.yml
backend/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: routes_ask.py  routes_conversations.py  routes_documents.py
backend/app/core/: config.py  logging.py  rate_limit.py
backend/app/db/: mongo.py  postgres.py
backend/app/kafka/: consumer.py  producer.py
backend/app/models/: document.py  events.py  schemas.py
backend/app/rag/: chunking.py  pdf_extract.py  providers.py  vector_store.py
backend/app/services/: ask_service.py  conversation_service.py  document_service.py  errors.py  ingestion_service.py
backend/init-scripts/: 01-init.sql
backend/tests/: test_ask_grounding.py  test_chunking.py  test_retrieval.py  test_upload_validation.py
docs/: HLD.md  for-java-devs.md  runbook.md
docs/adr/: 0001-microservices-split.md
docs/ai/: evaluation.md  guardrails.md  local-ollama.md  next-steps.md  observability.md  rag-architecture.md
docs/architecture/: code-structure.md  container.md
docs/interview/: cheatsheet.md  python-deep-dive.md
eval/: README.md  requirements.txt  run_eval.py
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
libs/documind_common/: README.md  pyproject.toml
libs/documind_common/documind_common/: __init__.py  config.py  correlation.py  logging.py  providers.py  reranker.py  retrieval.py  vector_store.py
libs/documind_common/tests/: test_rrf.py
libs/documind_contracts/: README.md  pyproject.toml
libs/documind_contracts/documind_contracts/: __init__.py  events.py  schemas.py  status.py
services/document-service/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
services/document-service/app/: chunking.py  config.py  consumer.py  db.py  errors.py  ingestion.py  main.py  models.py  pdf_extract.py  producer.py  routes.py  service.py
services/document-service/tests/: test_chunking.py  test_upload_validation.py
services/query-service/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
services/query-service/app/: ask_service.py  config.py  conversation_service.py  errors.py  guardrails.py  intent.py  main.py  mongo.py  observability.py  prompt.py  routes_ask.py  routes_conversations.py
services/query-service/tests/: test_ask_grounding.py  test_guardrails.py  test_intent.py  test_retrieval.py  test_whole_document.py
(+53 files in other folders)
