[project]
name = "documind-backend"
version = "1.0.0"
description = "DocuMind — Full-stack RAG document Q&A (FastAPI + LangChain backend)"
requires-python = ">=3.12"

# Runtime dependencies are pinned in requirements.txt for a reproducible
# `pip install -r requirements.txt`; this file carries tool configuration.

[tool.pytest.ini_options]
# asyncio_mode=auto lets us write `async def test_*` without decorating each one.
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
