[project]
name = "documind-document-service"
version = "1.0.0"
description = "DocuMind document-service: uploads, metadata, async ingestion."
requires-python = ">=3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
