[project]
name = "documind-query-service"
version = "1.0.0"
description = "DocuMind query-service: RAG ask flow + conversation history."
requires-python = ">=3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
